--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,10 +1,8 @@
 [build]
 builder = "NIXPACKS"
+nixpacksConfigPath = "./nixpacks.toml"
 
 [deploy]
 startCommand = "pnpm run start"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-
-[build.nixpacksConfigPath]
-nixpacks.toml = "./nixpacks.toml"
